syntax = "proto3";

option go_package = "./account";
package account;

message Balance {
  double  available = 1;
  double  on_hold = 2;
  double  scale = 3;
}

message Metadata {
  map<string, string> value = 1;
}

message Status {
  string  code = 1;
  string  description = 2;
}

message Account {
  string   id = 1;
  string   name = 2;
  string   parent_account_id = 3;
  string   entity_id = 4;
  string   asset_code = 5;
  string   organization_id = 6;
  string   ledger_id = 7;
  string   portfolio_id = 8;
  string   cluster_id = 9;
  Balance  balance = 10;
  Status   status = 11;
  bool     allow_sending= 12;
  bool     allow_receiving = 13;
  string   alias = 14;
  string   type = 15;
  int64    version = 16;
  string   created_at = 17;
  string   updated_at = 18;
  string   deleted_at = 19;
  Metadata metadata = 20;
}

message AccountsResponse {
  repeated Account accounts = 1;
}

message AccountsRequest {
  string   organization_id = 1;
  string   ledger_id = 2;
  repeated Account accounts = 3;
}

message AccountsID {
  string   organization_id = 1;
  string   ledger_id = 2;
  repeated string ids = 3;
}

message AccountsAlias {
  string   organization_id = 1;
  string   ledger_id = 2;
  repeated string aliases = 3;
}

service AccountProto {
  rpc GetAccountsByIds(AccountsID) returns (AccountsResponse) {}
  rpc GetAccountsByAliases(AccountsAlias) returns (AccountsResponse) {}
  rpc UpdateAccounts(AccountsRequest) returns (AccountsResponse) {}
}